--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -36,4 +36,6 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pytest
+        coverage run --source=grandiso -m pytest
+    - name: Codecov
+      uses: codecov/codecov-action@v1.0.13
